handle data binding for add alarm fragment

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,4 +61,14 @@ dependencies {
     /* Navigation */
     implementation "androidx.navigation:navigation-fragment:$nav_version"
     implementation "androidx.navigation:navigation-ui:$nav_version"
+
+    // Room Database
+    implementation "androidx.room:room-runtime:2.4.2"
+    implementation "androidx.room:room-ktx:2.5.0-alpha01"
+    kapt "androidx.room:room-compiler:2.5.0-alpha01"
+
+    // Coroutine
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.1'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.2'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.2'
 }
